fixed overlay z-index

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -70,3 +70,7 @@ body {
 .j2-up {
   text-transform: uppercase;
 }
+
+.sweet-overlay {
+  z-index: 1031;
+}
